; ModuleID = '/home/carl/AnghaBench/exploitdb/exploits/linux/remote/extr_23366.c_build_welcome_mes.c'
source_filename = "/home/carl/AnghaBench/exploitdb/exploits/linux/remote/extr_23366.c_build_welcome_mes.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@stderr = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [38 x i8] c"[-] Can't allocate memory,exiting...\0A\00", align 1
@welcome = common dso_local global i32 0, align 4
@.str.1 = private unnamed_addr constant [2 x i8] c"r\00", align 1
@.str.2 = private unnamed_addr constant [8 x i8] c"[-] %s\0A\00", align 1
@errno = common dso_local global i32 0, align 4
@.str.3 = private unnamed_addr constant [3 x i8] c"\0D\0A\00", align 1
@.str.4 = private unnamed_addr constant [258 x i8] c": NOTICE AUTH :*** Welcome dude\0A: NOTICE AUTH :*** Your host is %s, running client %s\0A: NOTICE AUTH :*** This server was created in the past\0A: NOTICE AUTH :*** There are 1 users and 0 services on 0 servers\0A: NOTICE AUTH :*** I have 1 clients and 0 servers\0D\0A\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i8* @build_welcome_mes(i8* %0, i8* %1) #0 {
  %3 = alloca i8*, align 8
  %4 = alloca i8*, align 8
  %5 = alloca i32*, align 8
  %6 = alloca i8*, align 8
  %7 = alloca i8*, align 8
  store i8* %0, i8** %3, align 8
  store i8* %1, i8** %4, align 8
  %8 = call i64 @malloc(i32 1024)
  %9 = inttoptr i64 %8 to i8*
  store i8* %9, i8** %6, align 8
  %10 = call i64 @malloc(i32 512)
  %11 = inttoptr i64 %10 to i8*
  store i8* %11, i8** %7, align 8
  %12 = load i8*, i8** %6, align 8
  %13 = icmp ne i8* %12, null
  br i1 %13, label %18, label %14

14:                                               ; preds = %2
  %15 = load i32, i32* @stderr, align 4
  %16 = call i32 (i32, i8*, ...) @fprintf(i32 %15, i8* getelementptr inbounds ([38 x i8], [38 x i8]* @.str, i64 0, i64 0))
  %17 = call i32 @exit(i32 0) #3
  unreachable

18:                                               ; preds = %2
  %19 = load i32, i32* @welcome, align 4
  %20 = call i64 @strlen(i32 %19)
  %21 = icmp sgt i64 %20, 0
  br i1 %21, label %22, label %51

22:                                               ; preds = %18
  %23 = load i32, i32* @welcome, align 4
  %24 = call i32* @fopen(i32 %23, i8* getelementptr inbounds ([2 x i8], [2 x i8]* @.str.1, i64 0, i64 0))
  store i32* %24, i32** %5, align 8
  %25 = load i32*, i32** %5, align 8
  %26 = icmp ult i32* %25, null
  br i1 %26, label %27, label %33

27:                                               ; preds = %22
  %28 = load i32, i32* @stderr, align 4
  %29 = load i32, i32* @errno, align 4
  %30 = call i8* @strerror(i32 %29)
  %31 = call i32 (i32, i8*, ...) @fprintf(i32 %28, i8* getelementptr inbounds ([8 x i8], [8 x i8]* @.str.2, i64 0, i64 0), i8* %30)
  %32 = call i32 @exit(i32 0) #3
  unreachable

33:                                               ; preds = %22
  %34 = load i8*, i8** %6, align 8
  %35 = call i32 @memset(i8* %34, i32 0, i32 1024)
  br label %36

36:                                               ; preds = %33, %42
  %37 = load i8*, i8** %7, align 8
  %38 = load i32*, i32** %5, align 8
  %39 = call i32* @fgets(i8* %37, i32 512, i32* %38)
  %40 = icmp eq i32* %39, null
  br i1 %40, label %41, label %42

41:                                               ; preds = %36
  br label %46

42:                                               ; preds = %36
  %43 = load i8*, i8** %6, align 8
  %44 = load i8*, i8** %7, align 8
  %45 = call i32 @strncat(i8* %43, i8* %44, i32 1021)
  br label %36

46:                                               ; preds = %41
  %47 = load i32*, i32** %5, align 8
  %48 = call i32 @fclose(i32* %47)
  %49 = load i8*, i8** %6, align 8
  %50 = call i32 @strcat(i8* %49, i8* getelementptr inbounds ([3 x i8], [3 x i8]* @.str.3, i64 0, i64 0))
  br label %56

51:                                               ; preds = %18
  %52 = load i8*, i8** %6, align 8
  %53 = load i8*, i8** %3, align 8
  %54 = load i8*, i8** %4, align 8
  %55 = call i32 @snprintf(i8* %52, i32 1024, i8* getelementptr inbounds ([258 x i8], [258 x i8]* @.str.4, i64 0, i64 0), i8* %53, i8* %54)
  br label %56

56:                                               ; preds = %51, %46
  %57 = load i8*, i8** %6, align 8
  ret i8* %57
}

declare dso_local i64 @malloc(i32) #1

declare dso_local i32 @fprintf(i32, i8*, ...) #1

; Function Attrs: noreturn
declare dso_local i32 @exit(i32) #2

declare dso_local i64 @strlen(i32) #1

declare dso_local i32* @fopen(i32, i8*) #1

declare dso_local i8* @strerror(i32) #1

declare dso_local i32 @memset(i8*, i32, i32) #1

declare dso_local i32* @fgets(i8*, i32, i32*) #1

declare dso_local i32 @strncat(i8*, i8*, i32) #1

declare dso_local i32 @fclose(i32*) #1

declare dso_local i32 @strcat(i8*, i8*) #1

declare dso_local i32 @snprintf(i8*, i32, i8*, i8*, i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
